--- a/css/style.css
+++ b/css/style.css
@@ -517,11 +517,12 @@ a.gal:hover img {
 }
 
 .box {
+    float: left;
     margin-bottom: 23px;
     margin-top: 4px;
     background-color: #e5e5e7;
     padding: 23px 22px 28px;
-    width: 30%;
+    width: 80%;
 }
 
 .box img {
@@ -685,6 +686,7 @@ footer {
 
 @media (max-width: 1200px)
 {
+    
     header, footer
     {
         width: 1200px;
@@ -701,7 +703,7 @@ footer {
 
     .container_12 .grid_7
     {
-        min-width: 670px;
+        min-width: 900px;
         font-size: 25px;
         line-height: 1.5;
         padding-left: 100px;
@@ -715,9 +717,10 @@ footer {
 
     .container_12 .grid_4
     {
-        min-width: 670px;
+        min-width: 500px;
         font-size: 25px;
         line-height: 1.5;
+        max-width: 900px;
     }
 
     .text1
@@ -766,6 +769,34 @@ footer {
    
 
    */
+
+
+   /* page services */
+
+   .grid_4 .box_grey
+   {
+    /* min-width: 300px; */
+    width: 500px;
+    float: left;
+    margin-left: 100px;
+    margin-right: 50px;
+
+   }
+
+   .box
+   {
+    /* width: 40%; */
+    float: left;
+    margin-left: 100px;
+    margin-right: 50px;
+
+   }
+
+
+
+   /* styles for contacts page */
+
+
 }
 
 @media /* only screen and */ (max-width: 995px) {
@@ -829,13 +860,30 @@ footer {
 
 
 
+.container_12 {
+    min-width: 700px;
+   }
+
+.container_12 .grid_5
+{
+    width: 720px;
+}
+
+.container_12 .grid_12
+{
+    /* min-width: 290px;
+    max-width: 300px; */
+}
+
+
+
 }
 
 
 @media /* only screen and */ (max-width: 767px) {
 body {
     min-width: none;
-    text-align: center;
+    
 }
 
 header {
@@ -979,6 +1027,13 @@ header h1 a {
     width: 280px;
 }
 
+.container_12
+{
+    min-width: 70%;
+    /* margin-left: 30%; */
+    text-align: center;
+}
+
 }
 
 @media only screen and (max-width: 479px) {
@@ -992,6 +1047,15 @@ h3
     font-size: 60px;
 }
 
+.box_inner
+{
+    font-size: 50px;
+}
+
+.text1
+{
+    font-size: 60px;
+}
 
 .content p 
 {
@@ -1004,6 +1068,39 @@ h3
 .ui-datepicker {
     left: 50% !important;
     margin-left: -140px;
+}
+
+.container_12 {
+    min-width: 290px;
+    font-size: 30px;
+   }
+
+.container_12 .grid_5
+{
+    width: 720px;
+}
+
+.container_12 .grid_12
+{
+    min-width: 290px;
+    /* max-width: 300px; */
+}
+
+.container_12 .grid_4
+{
+    text-align: left;
+    min-width: 900px;
+    position: relative;
+    /* margin-left: 250px; */
+    position: relative
+    /* max-width: 300px; */
+}
+
+.box_inner
+{
+
+}
+
 }
 
 /* .container_12 .grid_7
@@ -1041,6 +1138,11 @@ h3
         min-width: none;
     }
 }
+
+
+
+
+
 }
 
 /* Стилия для футера 
